correcion y utilidades